--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 • Contributing to Python/C++ geospatial analytics library developed by Sandia National Labs<br><br>
                 • Updating build tests involving Matplotlib and NumPy for image comparison
             </p>
-            <a href="https://github.com/sandialabs/tracktable" target="_blank">Github Link</a>
+            <a href="https://github.com/sandialabs/tracktable" target="_blank">Github Project</a>
         </div>
         <div class="project-card">
             <img src="assets/images/gwc.png" id="project-pic"></img>
@@ -56,14 +56,24 @@
                 • Led lessons for 50-60 students on game design with JavaScript (p5.js & p5.play)<br><br>
                 • Coordinated events with corporate sponsors (Bank of America, Synchrony, MetLife)
             </p>
-            <a href="https://girlswhocode.com/" target="_blank">Learn More</a>
+            <a href="https://girlswhocode.com/" target="_blank">Girls Who Code Page</a>
         </div>
     </div>
 
     <h1 id="hobbies-header">Hobbies</h1>
-    <div class="hobby">
-        <img src="" class="hobby-img">
-        <p class="hobby-text">Hiking</p>
+    <div class="hobbies">
+        <div class="hobby">
+            <img src="assets/images/hiking.JPG" class="hobby-img">
+            <p class="hobby-text">Hiking (Mt Tam above!)</p>
+        </div>
+        <div class="hobby">
+            <img src="assets/images/biking.JPG" class="hobby-img">
+            <p class="hobby-text">Biking</p>
+        </div>
+        <div class="hobby">
+            <img src="assets/images/baking.JPG" class="hobby-img">
+            <p class="hobby-text">Baking</p>
+        </div>
     </div>
     
     <script src="script.js"></script>
