Add footer and fix images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <div class="projects-cards">
         <div class="project-card">
             <img src="assets/images/tdm.png" id="project-pic"></img>
-            <p class="project-header">Undergraduate Research<br>Aug 2024 - May 2025</p>
+            <p class="project-header">Undergraduate Research</p>
+            <p class="project-time">Aug 2024 - May 2025</p>
             <p class="project-bio">
                 • Collaborated with Sandia National Labs to build trajectory prediction model<br><br>
                 • Developed Python (Pandas, Matplotlib, NumPy) testing functions to evaluate model accuracy
@@ -42,7 +43,8 @@
         </div>
         <div class="project-card">
             <img src="assets/images/sandia.png" id="project-pic"></img>
-            <p class="project-header">Open Source<br>May 2025 - Present</p>
+            <p class="project-header">Open Source</p>
+            <p class="project-time">May 2025 - Present</p>
             <p class="project-bio">
                 • Contributing to Python/C++ geospatial analytics library developed by Sandia National Labs<br><br>
                 • Updating build tests involving Matplotlib and NumPy for image comparison
@@ -51,7 +53,8 @@
         </div>
         <div class="project-card">
             <img src="assets/images/gwc.png" id="project-pic"></img>
-            <p class="project-header">GWC Teaching Assistant<br>May 2024 - Aug 2024</p>
+            <p class="project-header">GWC Teaching Assistant</p>
+            <p class="project-time">May 2024 - Aug 2024</p>
             <p class="project-bio">
                 • Led lessons for 50-60 students on game design with JavaScript (p5.js & p5.play)<br><br>
                 • Coordinated events with corporate sponsors (Bank of America, Synchrony, MetLife)
@@ -61,19 +64,21 @@
     </div>
 
     <h1 id="hobbies-header">Hobbies</h1>
-    <div class="hobbies">
-        <div class="hobby">
-            <img src="assets/images/hiking.JPG" class="hobby-img">
-            <p class="hobby-text">Hiking (Mt Tam above!)</p>
+    <div class="hobby-section">
+        <p class="hobby-text">I love hiking, biking, and baking!</p>
+        <div class="hobby-pics">
+            <img src="assets/images/hiking.jpg" class="hobby-img">
+            <img src="assets/images/biking.jpg" class="hobby-img">
+            <img src="assets/images/hiking2.jpg" class="hobby-img">
+            <img src="assets/images/baking.jpg" class="hobby-img">
+            <img src="assets/images/baking2.jpg" class="hobby-img">
         </div>
-        <div class="hobby">
-            <img src="assets/images/biking.JPG" class="hobby-img">
-            <p class="hobby-text">Biking</p>
-        </div>
-        <div class="hobby">
-            <img src="assets/images/baking.JPG" class="hobby-img">
-            <p class="hobby-text">Baking</p>
-        </div>
+    </div>
+
+    <div class="footer">
+        <a href="https://www.linkedin.com/in/dianahe-/"  class="footer-item" target="_blank">Linkedin ↗</a>
+        <a href="https://github.com/dianahe1"  class="footer-item" target="_blank">Github ↗</a>
+        <a href="https://drive.google.com/file/d/1MsiJaUO28YgTLoYL5Fcvx1BQYT3uyIla/view"  class="footer-item" target="_blank">Resume ↗</a>
     </div>
     
     <script src="script.js"></script>
