Update hobby images

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <div class="hobby-section">
         <p class="hobby-text">I love hiking, biking, and baking!</p>
         <div class="hobby-pics">
-            <img src="assets/images/hiking.jpg" class="hobby-img">
-            <img src="assets/images/biking.jpg" class="hobby-img">
-            <img src="assets/images/hiking2.jpg" class="hobby-img">
+            <img src="assets/images/hobby1.jpg" class="hobby-img">
+            <img src="assets/images/hobby2.jpg" class="hobby-img">
+            <img src="assets/images/hobby3.jpg" class="hobby-img">
             <img src="assets/images/baking.jpg" class="hobby-img">
-            <img src="assets/images/baking2.jpg" class="hobby-img">
+            <img src="assets/images/hobby5.jpg" class="hobby-img">
         </div>
     </div>
 
